// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple with Object.assign #2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #3: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #4: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign #5: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with Object.assign: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "A",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #2: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #3: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #4: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #5: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #6: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #7: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #8: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #9: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #10: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #11: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
            Object {
              "children": Array [],
              "message": "",
              "name": "Child2",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Child",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 3,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #12: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 2,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 1,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads #13: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads #13: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads #13: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads #13: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 4,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App2",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 2,
}
`;

exports[`Simple with multiple JSX spreads: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads: (createElement => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Simple with multiple JSX spreads: (createElement => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 3,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "message": "",
              "name": "IWantThisToBeInlined",
              "status": "INLINED",
            },
          ],
          "message": "",
          "name": "Button",
          "status": "INLINED",
        },
      ],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 2,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Unsafe spread: (JSX => JSX) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Unsafe spread: (JSX => createElement) 1`] = `
ReactStatistics {
  "componentsEvaluated": 1,
  "evaluatedRootNodes": Array [
    Object {
      "children": Array [],
      "message": "",
      "name": "App",
      "status": "ROOT",
    },
  ],
  "inlinedComponents": 0,
  "optimizedNestedClosures": 0,
  "optimizedTrees": 1,
}
`;

exports[`Unsafe spread: (createElement => JSX) 1`] = `"Failed to optimize React component tree for \\"App\\" due to a fatal error during evaluation: A fatal error occurred while prepacking."`;

exports[`Unsafe spread: (createElement => createElement) 1`] = `"Failed to optimize React component tree for \\"App\\" due to a fatal error during evaluation: A fatal error occurred while prepacking."`;
